--- a/docs/api.yaml
+++ b/docs/api.yaml
@@ -152,13 +152,13 @@ paths:
                   latitude:
                     type: number
                     format: double
-                    description:  `+` - North latitude `-` - South latitude
+                    description:  + - North latitude - - South latitude
                     minimum: -90
                     maximum: 90
                   longitude:
                     type: number
                     format: double
-                    description: `+` - East longitude `-` - West longitude
+                    description: + - East longitude - - West longitude
                     minimum: -180
                     maximum: 180
                 required: [timestamp, drone, drone_id, latitude, longitude, apiVersion]
@@ -280,7 +280,7 @@ components:
       properties:
         username:
           type: string
-          minLength: 8
+          minLength: 4
           maxLength: 64
         password:
           type: string
